Update README, fix point wire bounding rect